2005-10-14  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gtk.defs: Don't ignore gtk_list_*, that catches
	the list store too; instead ignore each one of the gtk_list
	functions. 

2005-09-17  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gtk-support.c (_gtk_selection_data_get_as_string): Fix
	GCC 4.0 warnings.

2005-04-11  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gdk-support.c (gdk_event_to_vector): Fix compiler
	warnings on alpha.

2005-04-10  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/guile-gtk-tree-model.c, gnome/gw/gdk-pixbuf-support.c,
	* gnome/gw/gtk-support.c: Use new SCM<->gpointer conversion macros.

2005-03-01  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gdk-spec.scm (initialize): Added type-rules making
	gint* and guint* output args.

2005-02-28  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/overrides/gdk.defs (gdk_window_set_icon): Added override
	with null-ok options for parameters.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-02-17  Andy Wingo  <wingo@pobox.com>

	* package.ac: Follow --disable-deprecation for deprecation cflags.

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2005-01-08  Andy Wingo  <wingo@pobox.com>

	* package.ac (GTK_DEPRECATED_CFLAGS): Add --disable-gtk-deprecated
	as an option, off by default. This is so when new GTK+ versions
	come out with more deprecations, a guile-gtk made for an older
	deprecation level will still compile.

	* gnome/gw/Makefile.am (libgw_guile_gnome_gtk_la_CFLAGS): Use
	$(GTK_DEPRECATED_CFLAGS).

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

	* gnome/gw/gtk-support.c ("guile-gtk-scm-to-tree-path"): Don't
	allow GValues as GtkTreePaths, we shouldn't get them.

	* gnome/gw/gtk-spec.scm: Really updated this time. Don't free the
	tree path, because this code is going into the GValue wrapper as