@@ -28,8 +28,7 @@
 (define-module (gnome gw gdk-spec)
   #:use-module (oop goops)
   #:use-module (ice-9 optargs)
-  #:use-module (g-wrap)
-  #:use-module (g-wrap guile)
+  #:use-module (gnome gw support g-wrap)
   #:use-module (gnome gw pango-spec)
   #:use-module (gnome gw support gobject)
   #:use-module (gnome gw support defs))
